Remove .Net Core dependency
Implemented my own BitConverter class that handles Big vs Little Endian and UInt24.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,13 @@
             "args": [
                 "-list object collector.iso"
             ]
+        },
+        {
+            "name": "PowerShell: Trace Script",
+            "type": "PowerShell",
+            "request": "launch",
+            "script": "$trace = Trace-Script {. ${file} -list object collector.iso}",
+            "args": []
         }
     ]
 }
